--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@700&family=Leckerli+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <div id="app">
+    <aside>
+      <div class="aside-container">
+        <header>
+          <img src="assets/Logo.svg" alt="Icone festa">
+          <h1>Festivite</h1>
+          <p>Crie um convite digital para o seu evento</p>
+        </header>
+      </div>
+    </aside>
+
+    <main>
+      <div class="main-container">
+        <div class="title">
+          <h2>Crie seu convite</h2>
+        </div>
+        
+        
+      </div>
+    </main>
+  </div>
 </body>
 </html>
