--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         <form id="form">
           <fieldset class="info">
-              <div class="calendar">
+              <div class="title-h2">
                 <img src="./assets/icons/calendar.svg" alt="Icone de calendario">
                 <legend>Sobre o evento</legend>
               </div>
@@ -116,6 +116,64 @@
               placeholder="Escreva sobre os detalhes do evento"
               ></textarea>
             </div>
+          </fieldset>
+
+          <fieldset class="custom">
+            <div class="title-h2">
+              <img src="./assets/icons/paintbrush.svg" alt="Icone de pincel">
+              <legend>Personalização</legend>
+            </div>
+
+              <div class="radio-color">
+                <label for="main-color">Cor principal</label>
+
+                <div class="color-wrapper">
+                  <div class="color-inner">
+                    <input type="radio" name="color" id="color1" value="color1">
+                  </div>
+
+                  <div class="color-inner">
+                    <input type="radio" name="color" id="color2" value="color2">
+                  </div>
+
+                  <div class="color-inner">
+                    <input type="radio" name="color" id="color3" value="color3">
+                  </div>
+
+                  <div class="color-inner">
+                    <input type="radio" name="color" id="color4" value="color4">
+                  </div>
+
+                  <div class="color-inner">
+                    <input type="radio" name="color" id="color5" value="color5">
+                  </div>
+
+                  <div class="color-inner">
+                    <input type="radio" name="color" id="color6" value="color6">
+                  </div>
+
+                  <div class="color-inner">
+                    <input type="radio" name="color" id="color7" value="color7">
+                  </div>
+
+                  <div class="color-inner">
+                    <input type="radio" name="color" id="color8" value="color8">
+                  </div>
+
+                  <div class="color-inner">
+                    <input type="radio" name="color" id="color9" value="color9">
+                  </div>
+
+                  <div class="color-inner">
+                    <input type="radio" name="color" id="color10" value="color10">
+                  </div>
+
+                  <div class="color-inner">
+                    <input type="radio" name="color" id="color11" value="color11">
+                  </div>
+
+                </div>
+              </div>
           </fieldset>
         </form>
       </div>
