--- a/index.html
+++ b/index.html
@@ -174,6 +174,111 @@
 
                 </div>
               </div>
+
+              <div class="theme-wrapper">
+                <label>Tema do evento</label>
+
+                <div class="theme-options">
+                  <div class="theme-inner">
+                    <input type="radio" name="theme" id="birth">
+                    <img src="./assets/images/aniversario.png" alt="imagem bolo de aniversário">
+                    <label for="birth">Aniversário</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input type="radio" name="theme" id="infantile">
+                    <img src="./assets/images/infantil.png" alt="imagem de festa infantil">
+                    <label for="infantile">Infantíl</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input type="radio" name="theme" id="graduation">
+                    <img src="./assets/images/formatura.png" alt="imagem de formatura">
+                    <label for="graduation">Graduação</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input type="radio" name="theme" id="marriage">
+                    <img src="./assets/images/casamento.png" alt="imagem de alianças de casamento">
+                    <label for="marriage">Casamento</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input type="radio" name="theme" id="baby-shower">
+                    <img src="./assets/images/cha de bebe.png" alt="imagem de chá de bebe">
+                    <label for="baby-shower">Chá de bebê</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input type="radio" name="theme" id="bridal-shower">
+                    <img src="./assets/images/cha de panela.png" alt="imagem de chá de panela">
+                    <label for="bridal-shower">Chá de panela</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input type="radio" name="theme" id="carnival">
+                    <img src="./assets/images/carnaval.png" alt="imagem de carnaval">
+                    <label for="carnival">Carnaval</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input type="radio" name="theme" id="easter">
+                    <img src="./assets/images/pascoa.png" alt="imagem de pascoa">
+                    <label for="easter">Páscoa</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input type="radio" name="theme" id="saint-john">
+                    <img src="./assets/images/sao joao.png" alt="imagem de sao joao">
+                    <label for="saint-john">São João</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input type="radio" name="theme" id="halloween">
+                    <img src="./assets/images/halloween.png" alt="imagem de halloween">
+                    <label for="halloween">Halloween</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input type="radio" name="theme" id="christmas">
+                    <img src="./assets/images/natal.png" alt="imagem de natal">
+                    <label for="christmas">Natal</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input type="radio" name="theme" id="other">
+                    <img src="./assets/images/outro.png" alt="imagem de pessoas aleatórias">
+                    <label for="other">Outro</label>
+                  </div>
+                </div>
+
+                <div class="theme-options2">
+                  <div class="style">
+                    <label>Estilo</label>
+                    <div class="style-wrapper">
+                      <input type="checkbox" name="style" id="style">
+                      <label for="style" class="text"></label>
+                    </div>
+                  </div>
+  
+                  <div class="cover-image">
+                    <label">Foto de capa</label>
+  
+                    <div class="file-wrapper">
+                      <input type="file" name="file" id="file">
+                      <label for="file">
+                        <span class="icone"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path fill-rule="evenodd" clip-rule="evenodd" d="M7.64645 1.64645C7.84171 1.45118 8.15829 1.45118 8.35355 1.64645L11.6869 4.97978C11.8821 5.17504 11.8821 5.49162 11.6869 5.68689C11.4916 5.88215 11.175 5.88215 10.9798 5.68689L8.5 3.20711V10C8.5 10.2761 8.27614 10.5 8 10.5C7.72386 10.5 7.5 10.2761 7.5 10V3.20711L5.02022 5.68689C4.82496 5.88215 4.50838 5.88215 4.31311 5.68689C4.11785 5.49162 4.11785 5.17504 4.31311 4.97978L7.64645 1.64645ZM2 9.5C2.27614 9.5 2.5 9.72386 2.5 10V12.6667C2.5 12.8877 2.5878 13.0996 2.74408 13.2559C2.90036 13.4122 3.11232 13.5 3.33333 13.5H12.6667C12.8877 13.5 13.0996 13.4122 13.2559 13.2559C13.4122 13.0996 13.5 12.8877 13.5 12.6667V10C13.5 9.72386 13.7239 9.5 14 9.5C14.2761 9.5 14.5 9.72386 14.5 10V12.6667C14.5 13.1529 14.3068 13.6192 13.963 13.963C13.6192 14.3068 13.1529 14.5 12.6667 14.5H3.33333C2.8471 14.5 2.38079 14.3068 2.03697 13.963C1.69315 13.6192 1.5 13.1529 1.5 12.6667V10C1.5 9.72386 1.72386 9.5 2 9.5Z" fill="#59B2FF"/>
+                          </svg>
+                          <span>Selecionar</span>
+                          </span>
+                        <span class="text-file">Nenhum arquivo selecionado</span>
+                      </label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              </div>
           </fieldset>
         </form>
       </div>
