--- a/index.html
+++ b/index.html
@@ -320,6 +320,40 @@
             </div>
 
           </fieldset>
+
+          <fieldset class="terms">
+            <div class="checks-wrapper">
+              <div class="terms-wrapper">
+                <input type="checkbox" id="terms-conditions"/>
+                <label for="terms-conditions">
+                  Li e concordo com os 
+                  <a href="#">Termos e Condições</a> e com a 
+                  <a href="#">Política de Privacidade</a>
+                </label>
+              </div>
+  
+              <div class="terms-wrapper">
+                <input type="checkbox" id="email-updates"/>
+                <label for="email-updates">
+                  Aceito receber atualizações e promoções por e-mail
+                </label>
+              </div>
+  
+              <div class="terms-wrapper">
+                <input type="checkbox" id="sms-updates"/>
+                <label for="sms-updates">
+                  Aceito receber atualizações e promoções por SMS
+                </label>
+              </div>
+            </div>
+          </fieldset>
+
+          <div class="button">
+            <button id="gerar-convite">
+              <img src="./assets/icons/ticket.svg" alt="">
+              <label for="gerar-convite">Gerar convite</label>
+            </button>
+          </div>
         </form>
       </div>
     </main>
